5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4375/executions/1753_3089.log
== TEST (2019-05-16 19:22:40) 
-- CODE:
num=int(input("digite um numero:"))
num3=num+num2
cont=0
soma=0
while(num!=0):
	if (num3>0):
		soma=soma+num3
		num=int(input("digite um numero:"))
		print(soma)
		print("Esquerda")
	if(num3<0):
		soma=soma+num3
		num=int(input("digite um numero:"))
	print(soma)
	print("Direita")
else:
	print(soma)
	print("Inicial")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    num3=num+num2
NameError: name 'num2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:25:01) 
-- CODE:
num=int(input("digite um numero:"))
cont=0
soma=0
while(num!=0):
	soma=soma+num
	num=int(input("digite um numero"))
		if (num>0):
			print(soma)
			print("Esquerda")
		if(num<0):
			print(soma)
			print("Direita")
else:
	print(soma)
	print("Inicial")
-- ERROR:
File "XXXX", line 7
    if (num>0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:26:09) 
-- CODE:
num=int(input("digite um numero:"))
cont=0
soma=0
while(num!=0):
	soma=soma+num
	num=int(input("digite um numero"))
		if (num>0):
			print(soma)
			print("Esquerda")
		if(num<0):
			print(soma)
			print("Direita")
		else:
			print(soma)
			print("Inicial")
-- ERROR:
File "XXXX", line 7
    if (num>0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:26:37) 
-- CODE:
num=int(input("digite um numero:"))
cont=0
soma=0
while(num!=0):
	soma=soma+num
	num=int(input("digite um numero"))
	if(num>0):
		print(soma)
		print("Esquerda")
	if(num<0):
		print(soma)
		print("Direita")
	else:
		print(soma)
		print("Inicial")
-- OUTPUT:
1
Esquerda
1
Inicial
3
Esquerda
3
Inicial
4
Esquerda
4
Inicial
6
Esquerda
6
Inicial
7
Esquerda
7
Inicial
9
Esquerda
9
Inicial
10
Esquerda
10
Inicial
12
Inicial
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:27:01) 
-- CODE:
num=int(input("digite um numero:"))
cont=0
soma=0
while(num!=0):
	soma=soma+num
	num=int(input("digite um numero"))
	if(soma>0):
		print(soma)
		print("Esquerda")
	if(soma<0):
		print(soma)
		print("Direita")
	else:
		print(soma)
		print("Inicial")
-- OUTPUT:
1
Esquerda
1
Inicial
3
Esquerda
3
Inicial
4
Esquerda
4
Inicial
6
Esquerda
6
Inicial
7
Esquerda
7
Inicial
9
Esquerda
9
Inicial
10
Esquerda
10
Inicial
12
Esquerda
12
Inicial
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:27:47) 
-- CODE:
num=int(input("digite um numero:"))
cont=0
soma=0
while(num!=0):
	soma=soma+num
	num=int(input("digite um numero"))
	if(soma>0):
		print(soma)
		print("Esquerda")
	if(soma<0):
		print(soma)
		print("Direita")
	else:
		print(soma)
		print("Inicial")
-- OUTPUT:
1
Esquerda
1
Inicial
3
Esquerda
3
Inicial
4
Esquerda
4
Inicial
6
Esquerda
6
Inicial
7
Esquerda
7
Inicial
9
Esquerda
9
Inicial
10
Esquerda
10
Inicial
12
Esquerda
12
Inicial
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 19:27:57) 
-- CODE:
num=int(input("digite um numero:"))
cont=0
soma=0
while(num!=0):
	soma=soma+num
	num=int(input("digite um numero"))
	if(soma>0):
		print(soma)
		print("Esquerda")
	if(soma<0):
		print(soma)
		print("Direita")
	else:
		print(soma)
		print("Inicial")
-- EXECUTION TIME:
0.202923
-- TEST CASE 1:
---- input:
1
2
1
2
1
2
1
2
0
---- correct output:
12
Direita
---- user output:
1
Esquerda
1
Inicial
3
Esquerda
3
Inicial
4
Esquerda
4
Inicial
6
Esquerda
6
Inicial
7
Esquerda
7
Inicial
9
Esquerda
9
Inicial
10
Esquerda
10
Inicial
12
Esquerda
12
Inicial
-- TEST CASE 2:
---- input:
-1
-2
-3
-4
-5
-6
-7
0
---- correct output:
-28
Esquerda
---- user output:
-1
Direita
-3
Direita
-6
Direita
-10
Direita
-15
Direita
-21
Direita
-28
Direita
-- TEST CASE 3:
---- input:
10
-5
5
-10
0
---- correct output:
0
Inicial
---- user output:
10
Esquerda
10
Inicial
5
Esquerda
5
Inicial
10
Esquerda
10
Inicial
0
Inicial
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:29:59) 
-- CODE:
num=int(input("digite um numero:"))
cont=0
soma=0
while(num!=0):
	soma=soma+num
	if(soma>0):
		print(soma)
		print("Esquerda")
	if(soma<0):
		print(soma)
		print("Direita")
	else:
		print(soma)
		print("Inicial")
		num=int(input("digite um numero:"))
-- OUTPUT:
1
Esquerda
1
Inicial
3
Esquerda
3
Inicial
4
Esquerda
4
Inicial
6
Esquerda
6
Inicial
7
Esquerda
7
Inicial
9
Esquerda
9
Inicial
10
Esquerda
10
Inicial
12
Esquerda
12
Inicial
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:33:18) 
-- CODE:
num=int(input("digite um numero:"))
cont=0
soma=0
while(num!=0):
	soma=soma+num
	num=int(input("digite um numero"))
	if(soma>0):
		print(soma)
		print("Esquerda")
	if(soma<0):
		print(soma)
		print("Direita")
	else:
		print(soma)
		print("Inicial")
		num=int(input("digite um numero:"))
-- OUTPUT:
1
Esquerda
1
Inicial
2
Esquerda
2
Inicial
3
Esquerda
3
Inicial
4
Esquerda
4
Inicial
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:33:31) 
-- CODE:
num=int(input("digite um numero:"))
cont=0
soma=0
while(num!=0):
	soma=soma+num
	num=int(input("digite um numero:"))
	if(soma>0):
		print(soma)
		print("Esquerda")
	if(soma<0):
		print(soma)
		print("Direita")
	else:
		print(soma)
		print("Inicial")
		num=int(input("digite um numero:"))
-- OUTPUT:
1
Esquerda
1
Inicial
2
Esquerda
2
Inicial
3
Esquerda
3
Inicial
4
Esquerda
4
Inicial
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:34:16) 
-- CODE:
num=int(input("digite um numero:"))
soma=0
while(num!=0):
	soma=soma+num
	num=int(input("digite um numero:"))
	if(soma>0):
		print(soma)
		print("Esquerda")
	if(soma<0):
		print(soma)
		print("Direita")
	else:
		print(soma)
		print("Inicial")
-- OUTPUT:
1
Esquerda
1
Inicial
3
Esquerda
3
Inicial
4
Esquerda
4
Inicial
6
Esquerda
6
Inicial
7
Esquerda
7
Inicial
9
Esquerda
9
Inicial
10
Esquerda
10
Inicial
12
Esquerda
12
Inicial
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:34:50) 
-- CODE:
num=int(input("digite um numero:"))
soma=0
while(num!=22):
	soma=soma+num
	num=int(input("digite um numero:"))
	if(soma>0):
		print(soma)
		print("Esquerda")
	if(soma<0):
		print(soma)
		print("Direita")
	else:
		print(soma)
		print("Inicial")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    num=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:40:16) 
-- CODE:
num=int(input("digite um numero:"))
soma=0
while(num!=0):
	soma=soma+num
	num=int(input("digite um numero:"))
	if(soma>0):
		print(soma)
		print("Esquerda")
	if(soma<0):
		print(soma)
		print("Direita")
	else:
		print(soma)
		print("Inicial")
-- OUTPUT:
1
Esquerda
1
Inicial
3
Esquerda
3
Inicial
4
Esquerda
4
Inicial
6
Esquerda
6
Inicial
7
Esquerda
7
Inicial
9
Esquerda
9
Inicial
10
Esquerda
10
Inicial
12
Esquerda
12
Inicial
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:42:31) 
-- CODE:
num=int(input("digite um numero:"))
soma=0
while(num!=0):
	soma=soma+num
	num=int(input("digite um numero:"))
	if(soma>0):
		print(soma)
		print("Esquerda")
	if(soma<0):
		print(soma)
		print("Direita")
	else:
		print(soma)
		print("Inicial")
-- OUTPUT:
1
Esquerda
1
Inicial
3
Esquerda
3
Inicial
4
Esquerda
4
Inicial
6
Esquerda
6
Inicial
7
Esquerda
7
Inicial
9
Esquerda
9
Inicial
10
Esquerda
10
Inicial
12
Esquerda
12
Inicial
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:43:54) 
-- CODE:
num=int(input("digite um numero:"))
soma=0
while(num!=0):
	soma=soma+num
	num=int(input("digite um numero:"))
if(soma>0):
	print(soma)
	print("Esquerda")
if(soma<0):
	print(soma)
	print("Direita")
else:
	print(soma)
	print("Inicial")
-- OUTPUT:
12
Esquerda
12
Inicial
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 19:44:10) 
-- CODE:
num=int(input("digite um numero:"))
soma=0
while(num!=0):
	soma=soma+num
	num=int(input("digite um numero:"))
if(soma>0):
	print(soma)
	print("Esquerda")
if(soma<0):
	print(soma)
	print("Direita")
else:
	print(soma)
	print("Inicial")
-- EXECUTION TIME:
0.164753
-- TEST CASE 1:
---- input:
1
2
1
2
1
2
1
2
0
---- correct output:
12
Direita
---- user output:
12
Esquerda
12
Inicial
-- TEST CASE 2:
---- input:
-1
-2
-3
-4
-5
-6
-7
0
---- correct output:
-28
Esquerda
---- user output:
-28
Direita
-- TEST CASE 3:
---- input:
10
-5
5
-10
0
---- correct output:
0
Inicial
---- user output:
0
Inicial
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 19:44:26) 
-- CODE:
num=int(input("digite um numero:"))
cont=0
soma=0
while(num!=0):
	soma=soma+num
	num=int(input("digite um numero:"))
if(soma>0):
	print(soma)
	print("Esquerda")
if(soma<0):
	print(soma)
	print("Direita")
else:
	print(soma)
	print("Inicial")
-- EXECUTION TIME:
0.162893
-- TEST CASE 1:
---- input:
1
2
1
2
1
2
1
2
0
---- correct output:
12
Direita
---- user output:
12
Esquerda
12
Inicial
-- TEST CASE 2:
---- input:
-1
-2
-3
-4
-5
-6
-7
0
---- correct output:
-28
Esquerda
---- user output:
-28
Direita
-- TEST CASE 3:
---- input:
10
-5
5
-10
0
---- correct output:
0
Inicial
---- user output:
0
Inicial
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:44:34) 
-- CODE:
num=int(input("digite um numero:"))
cont=0
soma=0
while(num!=0):
	soma=soma+num
	num=int(input("digite um numero:"))
if(soma>0):
	print(soma)
	print("Esquerda")
if(soma<0):
	print(soma)
	print("Direita")
else:
	print(soma)
	print("Inicial")
-- OUTPUT:
12
Esquerda
12
Inicial
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:45:18) 
-- CODE:
num=int(input("digite um numero:"))
cont=0
soma=0
while(num!=0):
	soma=soma+num
	num=int(input("digite um numero:"))
if(soma<0):
	print(soma)
	print("Esquerda")
if(soma>0):
	print(soma)
	print("Direita")
else:
	print(soma)
	print("Inicial")
-- OUTPUT:
12
Direita
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:46:12) 
-- CODE:
num=int(input("digite um numero:"))
cont=0
soma=0
while(num!=0):
	soma=soma+num
	num=int(input("digite um numero:"))
if(soma<0):
	print(soma)
	print("Esquerda")
if(soma>0):
	print(soma)
	print("Direita")
else(soma==0):
	print(soma)
	print("Inicial")
-- ERROR:
File "XXXX", line 13
    else(soma==0):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:46:22) 
-- CODE:
num=int(input("digite um numero:"))
cont=0
soma=0
while(num!=0):
	soma=soma+num
	num=int(input("digite um numero:"))
if(soma<0):
	print(soma)
	print("Esquerda")
if(soma>0):
	print(soma)
	print("Direita")
if(soma==0):
	print(soma)
	print("Inicial")
-- OUTPUT:
12
Direita
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:46:46) 
-- CODE:
num=int(input("digite um numero:"))
cont=0
soma=0
while(num!=0):
	soma=soma+num
	num=int(input("digite um numero:"))
if(soma<0):
	print(soma)
	print("Esquerda")
if(soma>0):
	print(soma)
	print("Direita")
if(soma==0):
	print(soma)
	print("Inicial")
-- OUTPUT:
12
Direita
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 19:47:00) 
-- CODE:
num=int(input("digite um numero:"))
cont=0
soma=0
while(num!=0):
	soma=soma+num
	num=int(input("digite um numero:"))
if(soma<0):
	print(soma)
	print("Esquerda")
if(soma>0):
	print(soma)
	print("Direita")
if(soma==0):
	print(soma)
	print("Inicial")
-- EXECUTION TIME:
0.241105
-- TEST CASE 1:
---- input:
1
2
1
2
1
2
1
2
0
---- correct output:
12
Direita
---- user output:
12
Direita
-- TEST CASE 2:
---- input:
-1
-2
-3
-4
-5
-6
-7
0
---- correct output:
-28
Esquerda
---- user output:
-28
Esquerda
-- TEST CASE 3:
---- input:
10
-5
5
-10
0
---- correct output:
0
Inicial
---- user output:
0
Inicial
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
